--- a/package.json
+++ b/package.json
@@ -6,22 +6,34 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node server.js",
+    "dev:server": "NODE_ENV=development nodemon server.js"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "better-sqlite3": "^11.9.1",
+    "blurhash": "^2.0.5",
+    "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "jimp": "^0.22.10",
+    "next": "15.3.1",
+    "nsfwjs": "^4.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "sharp": "^0.33.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "nodemon": "^3.1.10",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
