--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,7 @@ yarn-error.log*
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
-
+/temp
 # VS Code
 .vscode/*
 !.vscode/settings.json
