--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "server": "node server.js",
-    "dev:server": "NODE_ENV=development nodemon server.js"
+    "dev:server": "NODE_ENV=development nodemon server.js",
+    "test:matcher": "node scripts/test-matcher.js"
   },
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.22.0",
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.9.0",
     "better-sqlite3": "^11.9.1",
     "blurhash": "^2.0.5",
     "express": "^5.1.0",
