--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.9.0",
     "better-sqlite3": "^11.9.1",
     "blurhash": "^2.0.5",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "glob": "^11.0.2",
     "jimp": "^0.22.10",
     "next": "15.3.1",
     "nsfwjs": "^4.2.1",
@@ -31,8 +33,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "nodemon": "^3.1.10",
