--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 flask==3.0.2
 flask-cors==4.0.0
 pillow==10.2.0
-torch==2.2.0
+torch==2.7.0
 transformers==4.38.0
 numpy==1.26.3
 requests==2.31.0
+python-dotenv
