--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "tailwindcss": "^4",
+    "ts-jest": "^29.3.2",
     "typescript": "^5"
   }
 }
