Add Jest configuration and update testing setup
- Introduced jest.config.mjs for TypeScript testing configuration.
- Updated package.json to include a test script for running Jest.
- Added pytest to requirements.txt for Python testing.
- Enhanced clip-matcher.py to support forced still paths and model name overrides.
- Created unit tests in test_clip_matcher.py to validate clip-matching functionality with test media files.
- Added test media files for testing purposes.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "server": "node server.js",
     "dev:server": "NODE_ENV=development nodemon server.js",
-    "test:matcher": "node scripts/test-matcher.js"
+    "test:matcher": "node scripts/test-matcher.js",
+    "test": "jest"
   },
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.22.0",
