--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@types/supertest": "^6.0.3",
     "babel-jest": "^29.7.0",
     "babel-loader": "^10.0.0",
     "eslint": "^9",
@@ -51,6 +52,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.2",
     "typescript": "^5"
