Enhance testing capabilities by adding coverage reporting
- Updated package.json to include a new script "test:coverage" for running Jest with coverage reporting.
- This addition allows for better insights into test coverage across the codebase.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server": "node server.js",
     "dev:server": "NODE_ENV=development nodemon server.js",
     "test:matcher": "node scripts/test-matcher.js",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.22.0",
