--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
+    "dev": "ts-node server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
     "lint": "next lint",
     "server": "node server.js",
     "dev:server": "NODE_ENV=development nodemon server.js",
     "test:matcher": "node scripts/test-matcher.js",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.22.0",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.9.0",
-    "better-sqlite3": "^11.9.1",
+    "better-sqlite3": "^8.2.0",
     "blurhash": "^2.0.5",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.3",
     "glob": "^11.0.2",
     "jimp": "^0.22.10",
@@ -41,8 +41,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^18.16.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@types/supertest": "^6.0.3",
@@ -50,12 +50,15 @@
     "babel-loader": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "jest": "^29.7.0",
+    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.0",
     "tailwindcss": "^4",
-    "ts-jest": "^29.3.2",
-    "typescript": "^5"
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "@types/express": "^4.17.17",
+    "@types/cors": "^2.8.13"
   }
 }
