Refactor server implementation to TypeScript and update package scripts
- Converted server.js to server.ts, enhancing type safety and maintainability.
- Updated package.json scripts to utilize ts-node for server execution in development.
- Adjusted import paths in various controllers and server logic to reflect TypeScript structure.
- Ensured all changes were validated with updated test coverage, maintaining robust application behavior.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "next lint",
-    "server": "node server.js",
-    "dev:server": "NODE_ENV=development nodemon server.js",
+    "server": "ts-node server.ts",
+    "dev:server": "NODE_ENV=development nodemon --exec ts-node server.ts",
     "test:matcher": "node scripts/test-matcher.js",
     "test": "jest --coverage",
     "test:coverage": "jest --coverage"
