--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node server.ts",
+    "dev": "next dev",
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "next lint",
@@ -28,6 +28,7 @@
     "nsfwjs": "^4.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sharp": "^0.33.3",
     "sqlite3": "^5.1.7"
   },
@@ -41,6 +42,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^18.16.18",
     "@types/react": "^19.1.2",
@@ -56,9 +59,7 @@
     "supertest": "^7.1.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.0",
     "ts-node": "^10.9.1",
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13"
+    "typescript": "^5.0.0"
   }
 }
