--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,18 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "server": ["server.ts"],
-      "@/*": ["src/*"]
+      "server": [
+        "server.ts"
+      ],
+      "@/*": [
+        "src/*"
+      ]
     },
-    "types": ["node", "jest", "supertest"],
+    "types": [
+      "node",
+      "jest",
+      "supertest"
+    ],
     "target": "ES2020",
     "module": "CommonJS",
     "rootDir": ".",
@@ -17,8 +25,35 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "sourceMap": true,
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "noEmit": true,
+    "incremental": true,
+    "moduleResolution": "node",
+    "isolatedModules": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["src/**/*", "server.ts", "tests/**/*", "jest.setup.ts", "jest.silence.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "jest.setup.ts",
+    "jest.silence.ts",
+    "server.ts",
+    "src/**/*",
+    "tests/**/*",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
